--- a/css/responsive.css
+++ b/css/responsive.css
@@ -285,6 +285,9 @@
     }
 }
 
+.temp-mobile-nav{
+    display: none;
+}
 @media screen and (max-width: 700px) {
     .bottom-nav{
         display: flex;
@@ -317,5 +320,72 @@
         width: calc(100% - 66px);
         order: 1;
         margin: 10px 0 10px 10px;
+    }
+    .temp-mobile-nav{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 20px;
+        background-color: #B92728;
+    }
+    .temp-mobile-nav .dropdown{
+        display: block;
+        margin: 4px;
+        background-color: #B92728;
+        border: none;
+        color: #fff;
+        font-size: 16px;
+    }
+    .temp-mobile-nav .country{
+        display: flex;
+        align-items: center;
+    }
+    footer{
+        padding: 20px 10px 100px 10px;
+    }
+
+    .sales-24h .row .col a > div > div p{
+        font-size: 22px;
+    }
+    .sales-24h .row .col a > div > div span{
+        font-size: 22px;
+    }
+
+    .ramadan-sales .row .col p{
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .sales2 .col div{
+        flex-direction: column;
+        padding: 20px 0 0 0;
+    }
+
+    .women-sales .row .col p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .women-clothes .headers{
+        flex-direction: column;
+    }
+    .women-clothes .headers a{
+        margin: 10px 0 0 0;
+        order: 1;
+    }
+    .sale40 .row .col div p{
+        padding: 4px !important;
+        font-size: 20px !important;
+        line-height: 24px;
+    }
+
+    .red-section .row .col > a > div p{
+        font-size: 16px !important;
+        line-height: 22px;
+    }
+
+    .house-sales .headers .title p{
+        max-width: calc(100% - 40px)
     }
 }
