--- a/css/responsive.css
+++ b/css/responsive.css
@@ -143,7 +143,6 @@
         line-height: 22px;
     }
     .electronics-sales .row .col > div .rating{
-        flex-direction: column;
         padding: 8px 0 12px 0;
     }
     .electronics-sales .row .col > div .rating .stars img{
@@ -157,11 +156,10 @@
     .electronics-sales .row .col > div .rating .text{
         font-size: 14px;
         line-height: 18px;
-        order: 2;
+        order: 0;
         margin: 8px 0 0 0;
     }
     .electronics-sales .row .col > div .card-footer{
-        flex-direction: column;
         margin: 0 0 6px 0;
     }
     .electronics-sales .row .col > div .card-footer p{
@@ -359,7 +357,7 @@
 
     .sales2 .col div{
         flex-direction: column;
-        padding: 20px 0 0 0;
+        padding: 6px;
     }
 
     .women-sales .row .col p{
@@ -385,7 +383,43 @@
         line-height: 22px;
     }
 
-    .house-sales .headers .title p{
-        max-width: calc(100% - 40px)
+    .title p{
+        max-width: calc(100% - 32px) !important;
+        font-size: 16px !important;
+        margin: 0 !important;
+    }
+
+    .sales{
+        padding: 16px 6px;
+    }
+    .sales .col{
+        padding: 6px;
+    }
+    .sales .col > div{
+        display: flex;
+        padding: 4px;
+        flex-direction: column;
+    }
+    .sales .col > div .text{
+        padding: 4px;
+        text-align: center;
+    }
+    .sales .col > div .text p{
+        font-size: 16px !important;
+        line-height: 22px;
+    }
+    .sales .col > div .text span{
+        font-size: 16px;
+        line-height: 16px;
+        margin: 10px 0;
+    }
+
+    .changeable-border{
+        width: 100% !important;
+        border-radius: 16px 16px 0 0;
+        -webkit-border-radius: 16px 16px 0 0;
+        -moz-border-radius: 16px 16px 0 0;
+        -ms-border-radius: 16px 16px 0 0;
+        -o-border-radius: 16px 16px 0 0;
     }
 }
